tests/miniJava/neg/004452_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( class int [] java ) { return 0 ; } }
